--- a/css/main.css
+++ b/css/main.css
@@ -640,6 +640,14 @@ footer .Programmers .logo .h4 .i a {
 
 @media (min-width:320px) and (max-width:480px){
 
+
+*{
+    margin: 0%;
+    padding: 0;
+}
+
+
+
 ul li{
     display: none;
 }
@@ -648,6 +656,7 @@ nav .logo {
 
 text-align: center;
 width: 100%;
+
 }
 
 nav .button{
@@ -657,11 +666,21 @@ nav .button{
 .section1{
     display: grid;
     grid-template-columns: 1fr;
+
+
 }
+.section1 .box-img img{
+    width: 340px;
+
+}
+
 .section1 .right-side h1{
     font-size: 28px;
     direction: ltr;
+    
 }
+
+
 
 .box {
     display: grid;
@@ -669,6 +688,9 @@ nav .button{
     gap: 20px;
     padding: 0;
     margin: 0%;
+
+
+
     
 }
 .box .box1{
@@ -691,6 +713,8 @@ nav .button{
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+
+
 }
 
 .section2 .who {
@@ -704,13 +728,16 @@ nav .button{
     /* height: 400px; */
 }
 
+
 .row{
     display: grid;
     grid-template-columns: 1fr;
+
 }
 
 .titel2{
     margin: auto;
+
 }
 
 .titel2 p{
@@ -718,6 +745,7 @@ nav .button{
     margin: 0;
     width: 310px;
 }
+
 
 .contener .Collector{
     display: grid;
@@ -782,7 +810,7 @@ form .button{
 
 .map .address{
 width: 360px;
-padding-right: 20px;
+padding-right: 0px;
 }
 
 .map .address h4,.map .address p{
@@ -791,7 +819,7 @@ padding-right: 20px;
 
 .map .email{
     width: 360px;
-    padding-right: 20px;
+    padding-right: 0px;
 }
 
 .map .email h4,.map .email p{
@@ -828,60 +856,11 @@ footer .Programmers .logo h1 {
 }
 
 footer .Programmers .logo .h4 .i a {
-
     margin: 15px;
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* footer .Programmers .logo .h4 .i a {
-    background-color: #cfcfcf79;
-    margin: 30px 15px 30px 30px;
-    font-size: 20px;
-    padding: 10px 10px;
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-} */
-
-.Programmers .logo .h4 .i a i{
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .end2{
-    background-color: #00326b;
     text-align: center;
     padding: 30px 0;
     /* margin: 0%; */
@@ -893,5 +872,35 @@ footer .Programmers .logo .h4 .i a {
     margin: 0%;
     font-size: 15px;
 }
+
+
+}
+
+
+
+
+
+
+@media (min-width:481px) and (max-width:768px){
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
